In development:
	+ Old-style retweets on ctrl+click on retweet button

0.12
	+ Link from static map image in profile to the google maps in new tab
	* "About" page icon changed
	* Bug with new Twitter authorization page is fixed

0.10 - 0.11
	* Home timeline max height bug is fixed (thanks @chakrygin)

0.9
	* Fixing cursor for tweet buttons in Mac OS
	* Extension popup now can't be larger than screen height
	* No more lowercased usernames
	* Fixing small authentication bug with retry

0.8
	* Critical fix for reply button

0.7
	+ Reply
	* No full timeline repaint on new tweet post
	+ Tweets delete and undo retweets
	+ Retweet
	* Fix for the tweet text selection from the end

0.6
	* Links in profile bio are now clickable
	+ Link to the twitter.com page on the profile page
	* Larger avatars on the profile page allowed, up to 96px in width
	* Small bug with friendship cache updater fixed

0.5
	* Fixed bug with paste into the tweet editor

0.4
	+ Bio and location information to the profile page
	+ Retweets are now visible

0.3
	+ Follow/unfollow users from the profile page

0.0.3
	* Don't load profile info when switching to the profile page if it is already loaded
	+ OAuth timestamp autocorrection based on server reply
	* Correct account list refresh after remove one
	- Useless spellchecker is turned off in tweet editor

0.0.2
	* Initial production Alpha release