@@ -77,7 +77,7 @@ twic.vcl.Tweet = function(id, timeline) {
 					// this tweet is with our mention
 					wrapper.classList.add('mention');
 				}
-				
+
 				mentioned[n.toLowerCase()] = '@' + n;
 
 				return '<a class="nick" href="#profile#' + n.toLowerCase() + '">@' + n + '</a>';
@@ -202,20 +202,27 @@ twic.vcl.Tweet = function(id, timeline) {
 		return true;
 	};
 
-	tweet.reply = function() {
+	/**
+	 * @param {boolean=} all Reply to all mentioned
+	 */
+	tweet.reply = function(all) {
 		var
-			/** @var {string} **/ nick,
-			/** @var {string} **/ nickList = '@' + authorNick + ' ',
-			nicks = mentioned;
-			
-		if (authorNick.toLowerCase() in nicks) {
-			delete nicks[authorNick.toLowerCase()];
+			/** @type {string} **/ nickList = '@' + authorNick + ' ';
+
+		if (all) {
+			var
+				/** @type {string} **/ nick,
+				nicks = mentioned;
+
+			if (authorNick.toLowerCase() in nicks) {
+				delete nicks[authorNick.toLowerCase()];
+			}
+
+			for (nick in nicks) {
+				nickList += nicks[nick] + ' ';
+			}
 		}
-		
-		for (nick in nicks) {
-			nickList += nicks[nick] + ' ';
-		}
-	
+
 		replier = new twic.vcl.TweetEditor(timelineId, replyWrapper, id);
 		replier.autoRemovable = true;
 		replier.onTweetSend = tweet.onReplySend;
