@@ -1,5 +1,6 @@
 In development:
-	+ Old-style retweets on ctrl+click on retweet button
+	+ Reply to all with ctrl+click on reply button
+	+ Old-style retweets with ctrl+click on retweet button
 
 0.12
 	+ Link from static map image in profile to the google maps in new tab
